--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -5,22 +5,16 @@ export interface Props {
   title: string;
   description: string;
   technologies?: string[];
-  projectUrl?: string;
   githubUrl?: string;
 }
 
-const { title, description, technologies, githubUrl, projectUrl } = Astro.props;
+const { title, description, technologies, githubUrl } = Astro.props;
 ---
 
-<div class="text-lg p-6 my-2 flex flex-col gap-2 dark:bg-[#13151b] text-black dark:text-zinc-400 bg-[#efefef] rounded-xl shadow-xl transition-colors motion-reduce:transition-none">
+<li class="text-lg p-6 my-2 flex flex-col gap-2 dark:bg-nord-900 text-black dark:text-zinc-400 bg-white rounded-xl shadow-xl transition-colors motion-reduce:transition-none">
   <header class="flex justify-between items-center">
     <h2 class="text-xl font-medium dark:text-white">
-      {title}<a href={projectUrl} target="_blank" rel="noopener nofollow noreferrer" aria-label="external link button" class="ml-2"
-        ><Icon
-          name="eva:external-link-outline"
-          class="w-5 inline-block dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 transition-colors motion-reduce:transition-none"
-        />
-      </a>
+      {title}
     </h2>
     <a href={githubUrl} target="_blank" rel="noopener nofollow noreferrer" aria-label="github button"
       ><Icon name="eva:github-outline" class="w-6 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 transition-colors motion-reduce:transition-none" />
@@ -30,10 +24,10 @@ const { title, description, technologies, githubUrl, projectUrl } = Astro.props;
     technologies && (
       <ul class="flex gap-2 flex-wrap text-black dark:text-white">
         {technologies.map((tech) => (
-          <li class="dark:bg-[#1b1e27] bg-[#e6e6e6] py-0.5 px-2 text-sm rounded-md transition-colors motion-reduce:transition-none">{tech}</li>
+          <li class="dark:bg-nord-700 bg-zinc-200 py-0.5 px-2 text-sm rounded-md transition-colors motion-reduce:transition-none">{tech}</li>
         ))}
       </ul>
     )
   }
   <p>{description}</p>
-</div>
+</li>
