--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,29 +1,33 @@
 ---
 import { Icon } from "astro-icon";
 import Logo from "/favicon.svg";
+
+const desktopIcons = "dark:text-zinc-300 text-black hover:text-slate-500 dark:hover:text-slate-400 transition-colors motion-reduce:transition-none hidden sm:block";
+
+const mobileIcons = "w-6 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 transition-colors motion-reduce:transition-none";
 ---
 
-<header class="bg-white dark:bg-[#101218] text-lg dark:text-slate-300 transition-colors motion-reduce:transition-none">
+<header class="bg-white dark:bg-nord-900 text-lg dark:text-slate-300 transition-colors motion-reduce:transition-none">
   <a href="/" class="absolute m-6" aria-label="Website Logo"><img src={Logo} alt="Website Logo" class="w-10 h-10" /></a>
   <nav class="p-8">
     <div class="flex justify-end items-center space-x-2 m-0">
       <div class="flex flex-row space-x-4">
-        <a class="dark:text-zinc-300 text-black hover:text-slate-500 dark:hover:text-slate-400 transition-colors motion-reduce:transition-none hidden sm:block" href="/about">About</a>
-        <a class="dark:text-zinc-300 text-black hover:text-slate-500 dark:hover:text-slate-400 transition-colors motion-reduce:transition-none hidden sm:block" href="/projects">Projects</a>
-        <a class="dark:text-zinc-300 text-black hover:text-slate-500 dark:hover:text-slate-400 transition-colors motion-reduce:transition-none hidden sm:block" href="/blog">Blog</a>
+        <a class={desktopIcons} href="/about">About</a>
+        <a class={desktopIcons} href="/projects">Projects</a>
+        <a class={desktopIcons} href="/blog">Blog</a>
       </div>
       <div class="flex flex-row space-x-4">
-        <a class="hover:text-slate-500 dark:hover:text-slate-400 transition-colors block sm:hidden" href="/about" aria-label="person outline">
-          <Icon name="eva:person-outline" class="w-6 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 transition-colors motion-reduce:transition-none" />
+        <a class="transition-colors block sm:hidden" href="/about" aria-label="person outline">
+          <Icon name="eva:person-outline" class={mobileIcons} />
         </a>
-        <a class="hover:text-slate-500 dark:hover:text-slate-400 transition-colors block sm:hidden" href="/projects" aria-label="stacked outline">
-          <Icon name="eva:copy-outline" class="w-6 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 transition-colors motion-reduce:transition-none" />
+        <a class="transition-colors block sm:hidden" href="/projects" aria-label="stacked outline">
+          <Icon name="eva:copy-outline" class={mobileIcons} />
         </a>
-        <a class="hover:text-slate-500 dark:hover:text-slate-400 transition-colors block sm:hidden" href="/blog" aria-label="clipboard outline">
-          <Icon name="eva:clipboard-outline" class="w-6 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 transition-colors motion-reduce:transition-none" />
+        <a class="transition-colors block sm:hidden" href="/blog" aria-label="clipboard outline">
+          <Icon name="eva:clipboard-outline" class={mobileIcons} />
         </a>
         <a href="https://github.com/lancerossdev/lanceross.xyz" target="_blank" rel="noopener nofollow" aria-label="github logo outline">
-          <Icon name="eva:github-outline" class="w-6 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 transition-colors motion-reduce:transition-none" />
+          <Icon name="eva:github-outline" class={mobileIcons} />
         </a>
         <button class="theme-toggle" aria-label="theme toggle">
           <Icon name="eva:moon-outline" class="w-6 hover:text-slate-500 dark:hover:text-slate-400 transition-colors dark:hidden motion-reduce:transition-none" />
