--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,10 +4,10 @@ import { Icon } from "astro-icon";
 ---
 
 <Layout>
-  <section class="grid place-items-center text-center overflow-hidden relative mt-9">
+  <section class="grid place-items-center text-center overflow-hidden mt-9">
     <Icon name="mdi:robot-dead" class="w-36 h-36" />
     <h1 class="my-8 text-5xl font-semibold">404 Error</h1>
-    <h2 class="text-2xl dark:text-zinc-300">Sorry, it doesn't exist.</h2><br />
-    <a href="/"><button class="dark:bg-[#161923] bg-zinc-200 hover:bg-zinc-300 hover:dark:bg-[#1e212e] transition-colors motion-reduce:transition-none rounded-xl p-3 text-black dark:text-white">Go back to homepage</button></a>
+    <h2 class="text-2xl dark:text-zinc-300 mb-5">Sorry, it doesn't exist.</h2>
+    <a href="/" class="dark:bg-nord-700 bg-zinc-200 transition-all motion-reduce:transition-none rounded-xl p-3 text-black dark:text-white m-2 ring-2 ring-opacity-0 ring-blue-500 hover:ring-opacity-100">Go back to homepage</a>
   </section>
 </Layout>
