--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,7 @@
 ---
 import Technologies from "@components/Technologies.astro";
 import Layout from "@layouts/Layout.astro";
-import { technologies } from "@content/technologies";
+import tech from "@content/tech.json";
 ---
 
 <Layout title="About - Lance Ross" description="I'm Lance Ross, a web dev from Philippines. You can find more about me on this page.">
@@ -16,9 +16,9 @@ import { technologies } from "@content/technologies";
     <div class="mb-12 dark:text-zinc-300">
       <h1 class="text-4xl my-6 dark:text-white">Tech Stack</h1>
       <p>I love exploring new libraries and frameworks. Here is a short list of technologies that I learn and use with my side projects.</p>
-      <div class="sm:grid flex flex-col sm:grid-cols-2 md:grid-cols-3 my-5">
-        {technologies.map((tech) => <Technologies logo={tech.logo} text={tech.text} />)}
-      </div>
+      <ul class="sm:grid flex flex-col sm:grid-cols-2 md:grid-cols-3 my-5">
+        {tech.map((tech) => <Technologies logo={tech.logo} text={tech.text} />)}
+      </ul>
     </div>
   </section>
 </Layout>
