--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,33 +1,69 @@
 ---
 import Layout from "@layouts/Layout.astro";
-import { Picture } from "@astrojs/image/components";
 import Lance from "@images/lanceross.jpg";
-import Socials from "@components/Socials.astro";
+import { Picture } from "@astrojs/image/components";
+import { Icon } from "astro-icon";
+
+const socials = [
+  {
+    url: "https://twitter.com/lancerossdev",
+    icon: "eva:twitter-outline",
+    aria: "Twitter Logo",
+  },
+  {
+    url: "https:/github.com/lancerossdev",
+    icon: "eva:github-outline",
+    aria: "GitHub Logo",
+  },
+  {
+    url: "mailto:lancerossdev@duck.com",
+    icon: "eva:email-outline",
+    aria: "Email Logo",
+  },
+  {
+    url: "https://g.dev/lanceross",
+    icon: "ph:google-logo-bold",
+    aria: "Google Logo",
+  },
+];
 ---
 
 <Layout>
-  <section class="my-8 sm:mb-14 sm:flex sm:items-center sm:justify-evenly">
-    <div class="rounded-full overflow-hidden inline-flex sm:m-8">
-      <Picture src={Lance} alt="Image of the author" aspectRatio="1:1" widths={[320]} loading="eager" sizes="160px" width={160} height={160} />
-    </div>
+  <section class="py-10 sm:flex sm:items-center sm:justify-evenly">
+    <Picture
+      src={Lance}
+      class="rounded-full overflow-hidden inline-flex sm:m-8"
+      alt="Image of the author"
+      aspectRatio="1:1"
+      widths={[320]}
+      loading="eager"
+      sizes="160px"
+      width={160}
+      height={160}
+    />
     <header class="mt-8 max-w-lg sm:my-0">
-      <h1 class="mb-4 text-3xl font-bold tracking-tight dark:text-white">Lance Ross</h1>
+      <h1 class="mb-4 text-4xl font-semibold tracking-normal dark:text-white">Lance Ross</h1>
       <h2 class="mb-4 dark:text-zinc-200">Student Web Developer</h2>
       <p class="max-w-10 font-normal leading-7 dark:text-zinc-300 sm:max-w-sm md:max-w-xl">
         Welcome to my home on the internet. I'm an aspiring web developer in the Philippines building different projects for fun with web technologies I'm currently learning.
       </p>
     </header>
   </section>
-  <section>
-    <div class="py-14 grid place-items-center text-center">
-      <h1 class="text-3xl mb-8">Who am I?</h1>
-      <p class="max-w-2xl dark:text-zinc-300">
-        Hey there! I'm Lance Ross. I am an aspiring Web developer in the Philippines. You probably saw me on Twitter or Discord chatting around with web development related servers.
-      </p>
-      <p class="mt-5 max-w-xl dark:text-zinc-300">Interested with projects I'm working on? You can find all my <a href="/projects" class="hover:underline font-medium dark:text-slate-400 text-slate-700">projects</a> there. I also have a <a href="/blog" class="hover:underline dark:text-slate-400 text-slate-700">blog</a> where I write stories about web development</p>
-    </div>
-  </section>
-  <section>
-    <Socials />
+  <section class="py-14 grid place-items-center max-w-lg m-auto dark:text-zinc-300 text-center">
+    <h1 class="text-3xl mb-6 dark:text-white">Get In Touch</h1>
+    <p>If you want collab on a small project or just want say hello to me, Feel free to send an email and I will look forward to your message!</p>
+    {
+      socials && (
+        <ul class="mt-8 flex justify-center items-center flex-wrap">
+          {socials.map((socials) => (
+            <li class="mx-4">
+              <a href={socials.url} target="_blank" rel="noopener nofollow noreferrer" aria-label={socials.aria}>
+                <Icon name={socials.icon} class="w-7 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 transition-colors motion-reduce:transition-none my-3" />
+              </a>
+            </li>
+          ))}
+        </ul>
+      )
+    }
   </section>
 </Layout>
