fixed aria label and layouts

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -20,7 +20,7 @@ const description = "This is where I write about my experiences as a web develop
   <section>
     <h1 class="text-4xl mb-6 dark:text-white">
       {title}
-      <a href="/rss.xml">
+      <a href="/rss.xml" aria-label="rss feed logo">
         <Icon name="akar-icons:rss" class="inline-block ml-2 w-6 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 transition-colors motion-reduce:transition-none" />
       </a>
     </h1>
