added umami analytics

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@ const desktopIcons = "dark:text-zinc-300 text-black hover:text-slate-500 dark:ho
 const mobileIcons = "w-6 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 transition-colors motion-reduce:transition-none";
 ---
 
-<header class="bg-white dark:bg-nord-900 text-lg dark:text-slate-300 transition-colors motion-reduce:transition-none">
+<header class="bg-white dark:bg-nord-900 text-lg dark:text-slate-300 transition-colors motion-reduce:transition-none m-auto max-w-6xl">
   <a href="/" class="absolute m-6" aria-label="Website Logo"><img src={Logo} alt="Website Logo" class="w-10 h-10" /></a>
   <nav class="p-8">
     <div class="flex justify-end items-center space-x-2 m-0">
