--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -15,7 +15,7 @@ const ogImageParams = new URLSearchParams({
   title: JSON.stringify(frontmatter.title)
 }).toString();
 
-const bodyClass = "transition motion-reduce:transition-none scrollbar-thin scrollbar-thumb-slate-400 scrollbar-track-slate-300 dark:scrollbar-thumb-[#454b5f] dark:scrollbar-track-[#1d1f2a] dark:bg-[#101218] dark:text-white font-inter selection:bg-[#3d94ff42] min-h-screen flex flex-col sm:text-xl";
+const bodyClass = "transition motion-reduce:transition-none scrollbar-thin scrollbar-thumb-zinc-400 scrollbar-track-zinc-300 dark:scrollbar-thumb-nord-500 dark:scrollbar-track-nord-700 dark:bg-nord-900 dark:text-white font-inter selection:bg-blue-500/70 sm:text-xl";
 ---
 
 <!DOCTYPE html>
@@ -46,6 +46,7 @@ const bodyClass = "transition motion-reduce:transition-none scrollbar-thin scrol
     <meta name="generator" content={Astro.generator} />
     <meta name="robots" content="follow, index" />
     <meta name="author" content="Lance Ross" />
+    <script async defer src="https://analytics.umami.is/script.js" data-website-id="0e4da92e-6ccc-4ab6-9352-54d08571e9e6"></script>
     <script is:inline>
       const primaryColorScheme = "none";
       const darkModeMediaQuery = window.matchMedia("(prefers-color-scheme: dark)").matches;
@@ -86,7 +87,7 @@ const bodyClass = "transition motion-reduce:transition-none scrollbar-thin scrol
     <main class="m-auto p-6 max-w-4xl md:p-10 md:px-20">
       <header class="mb-5">
         <h1 class="m-0 !text-4xl mb-7 dark:text-white">{frontmatter.title}</h1>
-        <nav class="flex flex-col sm:flex-row sm:space-x-3 text-base dark:text-slate-400">
+        <nav class="flex flex-col sm:flex-row sm:space-x-3 text-base dark:text-gray-300">
           <time datetime={frontmatter.pubDate} class="mb-3 sm:mb-0">
             {thisDate}
           </time>
