update github actions workflow

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -4,7 +4,7 @@ import ProjectCard from "@components/ProjectCard.astro";
 import projects from "@content/projects.json";
 
 const title = "Projects";
-const description = "Here is a list of open source projects that I own and contribute to. This list get updated every build and deploy!";
+const description = "Here is a list of open source projects that I own and contribute to. This list gets updated every month!";
 ---
 
 <Layout title="Projects - Lance Ross" description="This is a list of projects I own and contribute to.">
