--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -46,6 +46,7 @@ const bodyClass = "transition motion-reduce:transition-none scrollbar-thin scrol
     <meta name="generator" content={Astro.generator} />
     <meta name="robots" content="follow, index" />
     <meta name="author" content="Lance Ross" />
+    <script async defer data-website-id="2c6f3c52-eb1f-4895-bbdf-504224851d11" src="https://umami.lanceross.xyz/umami.js"></script>
     <script is:inline>
       const primaryColorScheme = "none";
       const darkModeMediaQuery = window.matchMedia("(prefers-color-scheme: dark)").matches;
