--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -52,6 +52,7 @@ const classBody = "transition motion-reduce:transition-none scrollbar-thin scrol
     <meta name="generator" content={Astro.generator} />
     <meta name="robots" content="follow, index" />
     <meta name="author" content="Lance Ross" />
+    <script async defer data-website-id="2c6f3c52-eb1f-4895-bbdf-504224851d11" src="https://umami.lanceross.xyz/umami.js"></script>
     <script is:inline>
       // credits to satnaing on github
       const primaryColorScheme = "none";
