change alt text and edit metadata

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,9 +11,9 @@ export interface Props {
 
 const defaultMeta = {
   title: "Lance Ross",
-  description: "I'm a student web dev and a JAMStack enjoyer.",
+  description: "I'm a student web dev and a JAMStack enjoyer. Welcome to my small home on the internet!",
   image: "/banner.png",
-  imageAlt: "A Picture of Lance Ross with a Face Mask",
+  imageAlt: "Lance Ross with a Face Mask",
 };
 
 const { title = defaultMeta.title, description = defaultMeta.description, heroImage = defaultMeta.image, imageAlt = defaultMeta.imageAlt } = Astro.props as Props;
