--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ const socials = [
     <Picture
       src={Lance}
       class="rounded-full overflow-hidden inline-flex sm:m-8"
-      alt="Image of the author"
+      alt="Lance Ross with a Face Mask"
       aspectRatio="1:1"
       widths={[320]}
       loading="eager"
