configure root dir and edit ui part 1

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -91,5 +91,7 @@ const classBody = "transition motion-reduce:transition-none scrollbar-thin scrol
     <main class="m-auto p-6 max-w-4xl md:p-8">
       <slot />
     </main>
+    <Footer />
+    <NoScript />
   </body>
 </html>
