--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -9,10 +9,10 @@ const metadata = {
 ---
 
 <Layout {...metadata}>
-  <section class="grid place-items-center text-center overflow-hidden mt-9">
-    <Icon name="mdi:robot-dead" class="w-36 h-36" />
-    <h1 class="my-8 text-5xl font-semibold">{metadata.title}</h1>
-    <h2 class="text-2xl dark:text-zinc-300 mb-5">{metadata.description}</h2>
-    <a href="/" class="dark:bg-nord-700 bg-zinc-200 transition-all motion-reduce:transition-none rounded-xl p-3 text-black dark:text-white m-2 ring-2 ring-opacity-0 ring-blue-500 hover:ring-opacity-100">Go back to homepage</a>
-  </section>
+  <div class="flex flex-col items-center justify-center mt-9">
+    <div class="max-w-md md:max-w-2xl text-center p-4">
+      <h1 class="my-8 text-5xl font-semibold">{metadata.title}</h1>
+      <h2 class="text-2xl dark:text-zinc-300 mb-5">{metadata.description}</h2>
+    </div>
+  </div>
 </Layout>
